--- a/contents/config.yml
+++ b/contents/config.yml
@@ -1,5 +1,5 @@
-title: Sen Li's Homepage
-page-top-title: Sen Li
-top-section-bg-text: Computer Science
-home-subtitle: Sen Li&ensp;|&ensp;李森
-copyright-text: '&copy; Sen Li 2023-2025. All Rights Reserved.'
+title: Shengwen Cheng's Homepage
+page-top-title: Shengwen Cheng
+top-section-bg-text: Orthopedics
+home-subtitle: Shengwen Cheng&ensp;|&ensp;成圣文
+copyright-text: '&copy; Shengwen Cheng 2023-2025. All Rights Reserved.'
